ensure font sizing for skill correct on mobile

--- a/src/assets/css/skills-styles.css
+++ b/src/assets/css/skills-styles.css
@@ -61,3 +61,9 @@
 .skill-icon.c {
     color: #adab02;
 }
+
+@media (max-width: 1280px) {
+    .skill-name {
+        font-size: 1.2rem;
+    }
+}
